updating html/css/js for customer

--- a/tuitionplan.html
+++ b/tuitionplan.html
@@ -28,14 +28,19 @@
 
     <!--Registration Info-->
     <div class="registrationcard">
-      <p class="registrationcardtext">Registration Fee:<br>
-        <span class="registrationcardsubtext" >Semester: $200 <br>
-        Annual: $325</span>
-      </p>
-
-        <p class="registrationcardtext">International Registration Fee:<br>
-          <span class="registrationcardsubtext" > Semester: $650<br>
-        Annual $995</p></span>
+      <table>
+        
+        <tr>
+          <td>United States:</td>
+          <td>$325 Annual Registration Fee</td>
+          <td>$200 Semester Registration Fee</td>
+        </tr>
+        <tr>
+          <td>International:</td>
+          <td>$995 Annual Registration Fee</td>
+          <td>$650 Semester Registration Fee</td>
+        </tr>
+      </table>
     </div>
 
     <!-- Tuition Plan Toggle -->
@@ -53,7 +58,7 @@
     <div class="tuitioncard">
       <img src="https://www.cmasas.org/sites/default/files/2025-03/Elementary%20icon%20essential.png" alt=""
         class="tutionicon" id="essentialicon">
-      <p class="tuitionname">Essential Care Plan</p>
+      <p class="tuitionname" id="essentialtuitionname"><a href='https://store.cmasas.org/elementary-essential-care-plan/'>Essential Care Plan</a></p>
       <p class="tuitionprice" id="essentialprice">$6,600 Tuition</p>
 
       <div class="center">
@@ -62,9 +67,9 @@
       <ul class="tuitiondescrip" id="essentialdescrip">
         <li>Up to 5 Full Year Courses</li>
         <li>4 Core + 1 Elective</li>
-        <li>PEC Support Level 1 (1 Day/Week)</li>
+        <li>Personalized Education Coach (PEC) Support Level 1 (1 Day Per Week)</li>
         <li>Weekly Homeroom</li>
-        <li>CI Support</li>
+        <li>Course Instructor (CI) Support</li>
         <li>Limited Clubs (1)</li>
         <li>Regional Gathering Opportunities</li>
         <li>International Trip Opportunities</li>
@@ -102,7 +107,7 @@
       <img src="https://www.cmasas.org/sites/default/files/2025-03/Most%20Popular%20Icon.png" class="mostpopular" id="mostpopular">
       <img src="https://www.cmasas.org/sites/default/files/2025-03/Elementary%20icon%20premier.png" alt=""
         class="tutionicon" id="premiericon">
-      <p class="tuitionname">Premier Care Plan</p>
+      <p class="tuitionname" id="premietuitionname">Premier Care Plan</p>
       <p class="tuitionprice" id="premierprice">$7,750 Tuition</p>
  
       <div class="center">
@@ -111,13 +116,13 @@
       <ul class="tuitiondescrip" id="premierdescrip">
         <li>Up to 6 Full Year Courses</li>
         <li>4 Core + 2 Electives</li>
-        <li>PEC Support Level 1 (1 Day/Week)</li>
+        <li>Personalized Education Coach (PEC) Support Level 1 (1 Day Per Week)</li>
         <li>Weekly Homeroom</li>
-        <li>CI Support</li>
+        <li>Course Instructor (CI) Support</li>
         <li>Unlimited Club Access</li>
         <li>Regional Gathering Opportunities</li>
         <li>International Trip Opportunities</li>
-        <li>Full Elective Course Access (200+ Courses)</li>
+        <li>Full Elective Access (200+ Courses)</li>
       </ul>
       <div id="premierpowerups">
         <div class="tuitionline"></div>
@@ -138,7 +143,6 @@
           $3,000 (Semester) $5,000 (Annual)
         </p>
 
-
         <p class="powerupsubtext">
           Payment Plan Available
         </p>
@@ -148,17 +152,17 @@
     <div class="tuitioncard">
       <img src="https://www.cmasas.org/sites/default/files/2025-03/Elementary%20icon%20personalized.png" alt=""
         class="tutionicon" id="personalizedicon">
-      <p class="tuitionname">Personalized Care Plan</p>
+      <p class="tuitionname" id="personalizedtuitionname"><a href='https://store.cmasas.org/elementary-personalized-care-plan/'>Personalized Care Plan</a></p>
       <p class="tuitionprice" id="personalizedprice">$2,750 Tuition</p>
       <!-- <p class="tuitionpricesubtxt">$445 Registration Fee + $895 (Full Year)</p> -->
       <div class="center">
         <div class="whatsincludedred" id="personalizedincluded">What’s Included:</div>
       </div>
       <ul class="tuitiondescrip" id="personalizeddescrip">
-        <li>Low Annual Base Tuition + Pay as you go for Courses</li>
-        <li>PEC Support Level 1 (1 Day/Week)</li>
+        <li>Low Annual Base Tuition + Pay as You Go for Courses</li>
+        <li>Personalized Education Coach (PEC) Support Level 1 (1 Day Per Week)</li>
         <li>Weekly Homeroom</li>
-        <li>CI Support</li>
+        <li>Course Instructor (CI) Support</li>
         <li>Unlimited Club Access</li>
         <li>Regional Gathering Opportunities</li>
         <li>International Trip Opportunities</li>
@@ -182,10 +186,12 @@
           $3,000 (Semester) $5,000 (Annual)
         </p>
 
-
         <p class="powerupsubtext">
           Payment Plan Available
         </p>
+        <div class="poweruptext">
+          Course Pricing: $895 Full Year Course
+        </div>
         </div>
       
 
